--- a/index.html
+++ b/index.html
@@ -1,3 +1,3 @@
 <html>
-    <h1></h1>
+    <a href="https://www.facebook.com/groups/590419774879550/">The Ivys - Residents Only group</a></h1>
 </html>
