--- a/index.html
+++ b/index.html
@@ -1,3 +1,3 @@
 <html>
-    <a href="https://www.facebook.com/groups/590419774879550/">The Ivys - Residents Only group</a></h1>
+    <h1>At the last AGM, 2 members held about 20% of the votes.  Be mindful of whom you give your proxy, they aren't required to vote to your preference.</h1>
 </html>
