--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
 <html>
-    <h1>At the last AGM, 2 members held about 20% of the votes.  Be mindful of whom you give your proxy, they aren't required to vote to your preference.</h1>
+    <h1>At the last AGM, 2 members held about 20% of the votes.</h1>
+    <h3>Be mindful who holds your proxy<h3>
 </html>
