--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
 <html>
     <h1>At the last AGM, 2 members held about 20% of the votes.</h1>
-    <h3>Be mindful who holds your proxy<h3>
+    <h3>Be mindful who holds your proxy.<h3>
 </html>
